welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: not found: value tab
    {if (value == tab(i)) {return i}}
                  ^